# hashtable

./: .gitignore  CMakeLists.txt  doxygen-hashtable.conf
inc/: hashcore.h  murmur.h  test.h
src/: hashcore.c  hashitem.c  murmur.c
tst/: main.c
